# life

./: CMakeLists.txt  README.md
src/: board.c  board.h  color.h  game.c  game.h  input.c  input.h  main.c  ui.c  ui.h
